commiting the changes done on 10/07

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Lambdas",
+            "request": "launch",
+            "mainClass": "lambdasAndStreams.Lambdas",
+            "projectName": "DesignPatterns_4d594c17"
+        },
+        {
+            "type": "java",
+            "name": "BookLibraryDemo",
+            "request": "launch",
+            "mainClass": "exceptions.customExceptions.BookLibraryDemo",
+            "projectName": "DesignPatterns_4d594c17"
+        },
+        {
+            "type": "java",
             "name": "ThreadException",
             "request": "launch",
             "mainClass": "exceptions.checkedExceptions.ThreadException",
