--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "PrintSpiralFormOf2DArray",
+            "request": "launch",
+            "mainClass": "twoDArrays.PrintSpiralFormOf2DArray",
+            "projectName": "DesignPatterns_4d594c17"
+        },
+        {
+            "type": "java",
+            "name": "PrintBoundaryElementof2DArray",
+            "request": "launch",
+            "mainClass": "twoDArrays.PrintBoundaryElementof2DArray",
+            "projectName": "DesignPatterns_4d594c17"
+        },
+        {
+            "type": "java",
             "name": "UnboundedWildcardExample",
             "request": "launch",
             "mainClass": "generics.UnboundedWildcardExample",
