--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ZeroQueries_1",
+            "request": "launch",
+            "mainClass": "interviewProblems.ZeroQueries_1",
+            "projectName": "DesignPatterns_4d594c17"
+        },
+        {
+            "type": "java",
+            "name": "ZeroQueries",
+            "request": "launch",
+            "mainClass": "interviewProblems.ZeroQueries",
+            "projectName": "DesignPatterns_4d594c17"
+        },
+        {
+            "type": "java",
             "name": "BrowserHistorySortedDemo",
             "request": "launch",
             "mainClass": "collection_iterators.BrowserHistorySortedDemo",
